# tinyfish-hackathon

./: .env.example  .gitignore  Makefile  README.md  package-lock.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
apps/api/src/app/: main.py
apps/api/src/app/agents/: job_extraction_agent.py  question_agent.py  research_agent.py
apps/api/src/app/api/: router.py
apps/api/src/app/api/routes/: research.py
apps/api/src/app/core/: config.py  security.py
apps/api/src/app/db/: init_db.py  session.py
apps/api/src/app/graphs/: interview_graph.py
apps/api/src/app/providers/: llm_provider.py  tinyfish_provider.py
apps/api/src/app/services/: interview_service.py  job_service.py  repositories.py  research_service.py
apps/api/tests/: test_research_resilience.py
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/config/: route.ts
apps/web/components/: agent-thinking-panel.tsx  feedback-dashboard.tsx  hero-section.tsx  interview-questions.tsx  site-header.tsx  theme-toggle.tsx  voice-interview.tsx
apps/web/components/ui/: input.tsx
apps/web/lib/: api.ts  config.ts
docs/: architecture.md
infra/: main.tf  outputs.tf  variables.tf
infra/modules/alb/: main.tf  outputs.tf  variables.tf
infra/modules/ecs_services/: main.tf  outputs.tf  variables.tf
infra/scripts/: capture-infra.sh  start.sh  stop.sh
