[project]
name = "tinyfish-ai-mock-interview-api"
version = "0.1.0"
description = "Backend API for the TinyFish AI mock interview system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "supabase>=2.7.4",
  "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=5.0.0",
  "ruff>=0.6.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
